<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Radix</string>
    <string name="devices">BLE Devices</string>
    <string name="menu_usr">Official Website</string>
    <string name="share">Share</string>
    <string name="share_title">Select app to share</string>
    <string name="share_ex">Can\'t find share component to share</string>
    <string name="menu_hex_send">HEX Send</string>
    <string name="menu_asscii_send">ASSCII Send</string>
    <string name="menu_clear_display">Clear Display</string>
    <string name="share_text">USRBleAssistent,Let BLE development easier.DownLoad:http://xxx.xxx.xxx</string>
    <string name="option_fail">Operation failure</string>
    <string name="alert">Alert</string>
    <string name="conn_disconnected">Connect disconnect,please back to reconnect</string>
    <string name="conn_disconnected_home">Connect disconnect,please reconnect</string>
    <string name="ok">OK</string>

    <string name="connect_fail">Connection failure</string>

    <string name="searching">Searching</string>
    <string name="search_device_count">Have searched %1$d devices</string>

    <string name="device_ble_not_supported">device ble not supported</string>
    <string name="pull_down_refresh">Pull down refresh</string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_characteritics">Characteritics</string>
    <string name="unkonw_service">Unkonw Service</string>

    <string name="gatt_services_read">Read</string>
    <string name="gatt_services_write">Write</string>
    <string name="gatt_services_notify">Notify</string>
    <string name="gatt_services_indicate">Indicate</string>


    <!-- Find Me profile elements -->
    <string name="find_linkloss">Link Loss</string>
    <string name="find_spinner_prompt">Select</string>
    <string name="find_immediate_alert">Immediate Alert</string>
    <string name="find_value_read_toast">Value read from kit: </string>
    <string name="find_value_written_toast">Written </string>
    <string name="find_value_success_toast"> successfully </string>

    <!-- Blood pressure profile elements -->
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_pressure_systolic">SYS</string>
    <string name="blood_pressure_diastolic">DIA</string>
    <string name="blood_pressure_start_btn">START</string>
    <string name="blood_pressure_stop_btn">STOP</string>
    <string name="blood_pressure_mmHg">mmHg</string>
    <string name="blood_pressure_kPa"> kPa</string>

    <!-- RSC profile elements -->
    <string name="rsc_weight">Weight:</string>
    <string name="rsc_weight_unit">kg</string>
    <string name="rsc_time">Time:</string>
    <string name="rsc_graph_title">Average Speed Vs Time</string>
    <string name="rsc_calories">Calories burnt</string>
    <string name="rsc_avg_speed">Avg Speed (km/h)</string>
    <string name="rsc_avg_speed_unit">km/h</string>
    <string name="rsc_distance_unit">km</string>
    <string name="rsc_total_distance">Total Distance Ran</string>

    <!-- CSC profile elements -->
    <string name="csc_cadence">Cadence</string>
    <string name="csc_cadence_graph">Cadence (rpm)</string>
    <string name="csc_cadence_unit">rpm</string>
    <string name="csc_distance_unit">Distance (km)</string>
    <string name="csc_cadence_graph_title">Cadence Vs Time</string>
    <string name="csc_cadence_graph_unit">Cadence (rpm)</string>
    <string name="csc_total_distance">Total Distance Cycled</string>
    <string name="csc_weight_toast">Enter a valid weight !</string>

    <string name="csc_weight_toast_greater">Warning! The weight entered is greater than 200 kg</string>
    <string name="csc_weight_toast_zero">Warning! The weight entered is less than 1 kg</string>
    <string name="csc_weight_toast_empty">Warning!  No value entered in weight field</string>


    <!-- Sensorhub profile elements -->
    <string name="sen_hub">Sensor Hub</string>
    <string name="sen_hub_locate">Locate Device</string>
    <string name="sen_hub_locate_stop">Stop Alert</string>
    <string name="sen_hub_accelerometer">Accelerometer</string>
    <string name="sen_hub_accelerometer_x">X: </string>
    <string name="sen_hub_accelerometer_Y">Y: </string>
    <string name="sen_hub_accelerometer_Z">Z: </string>
    <string name="sen_hub_temperature">Temperature</string>
    <string name="sen_hub_temperature_unit">°C</string>
    <string name="sen_hub_battery">Battery Level</string>
    <string name="sen_hub_battery_unit">%</string>
    <string name="sen_hub_pressure">Pressure</string>
    <string name="sen_hub_pressure_unit">Kpa</string>
    <string name="sen_hub_sensor_scan_interval">Sensor Scan Interval</string>
    <string name="sen_hub_sensor_type">Sensor Type</string>
    <string name="sen_hub_threshold">Threshold</string>

    <string-array name="findme_immediate_alert_array">
        <item>No Alert</item>
        <item>Mid Alert</item>
        <item>High Alert</item>
    </string-array>
    <string-array name="filter_configuration_alert_array">
        <item>Select Filter Configuration</item>
        <item>None</item>
        <item>Average</item>
        <item>Medium</item>
        <item>Custom</item>
    </string-array>

    <string name="send_to">Send to..</string>

    <!-- Battery profile elements -->
    <string name="battery_stop_notify">Stop Notify</string>
    <string name="battery_start_notify">Start Notify</string>
    <string name="battery_read">Read</string>

    <!-- RDK profile elements -->
    <string name="rdk_emulator_view">Remote Control RDK</string>
    <string name="rdk_emulator_view_identifier">CY5672</string>
    <string name="view_trackpad">VIEW TRACK PAD/MOTION SENSOR DATA</string>
    <string name="view_microphone">VIEW MICROPHONE DATA</string>
    <string name="volume">VOL</string>
    <string name="channel">CH</string>
    <string name="rdk_microphone">MICROPHONE DATA</string>
    <string name="rdk_motion">TRACK PAD/MOTION SENSOR DATA</string>
    <string name="property">PROPERTY</string>
    <string name="format">FORMAT</string>
    <string name="value">VALUE</string>
    <string name="motion_x">X</string>
    <string name="motion_y">Y</string>
    <string name="motion_zwheel">Z-Wheel</string>
    <string name="motion_tilt">Tilt</string>
    <string name="motion_lcd">Left Click Down</string>
    <string name="motion_lcu">Left Click Up</string>
    <string name="motion_rcd">Right Click Down</string>
    <string name="motion_rcu">Right Click Up</string>
    <string name="motion_keycode">Keycode</string>
    <string name="motion_default_value">00</string>
    <string name="motion_clear">CLEAR COUNTERS</string>
    <string name="motion_clear_data">CLEAR DATA</string>
    <string name="speech_text">SPEECH TO TEXT</string>
    <string name="record">RECORD</string>
    <string name="hex">HEX</string>
    <string name="record_stop">STOP</string>
    <string name="convert">CONVERT</string>
    <string name="change_api">CHANGE API KEY</string>
     <string name="apikey_requirement_text">Please enter your developer API Key
        for voice to text conversion</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="channel_up">Channel Up</string>
    <string name="channel_down">Channel Down</string>
    <string name="power_on">On</string>
    <string name="power_off">Off</string>
    <string name="source">Source</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!-- 自定义标题栏 -->
    <string name="titlebar_back">返回</string>
    <string name="titlebar_cancel"> 取消 </string>
    <string name="titlebar_check_all"> 全选 </string>
    <string name="titlebar_send_key">发送钥匙</string>
    <string name="titlebar_select_key">选择钥匙</string>
    <string name="titlebar_login">业主登录</string>
    <string name="titlebar_my_keys">我的钥匙</string>
    <string name="titlebar_key_active_time">钥匙时效</string>
    <string name="titlebar_send_to_friend">发送好友</string>
    <string name="titlebar_visitor_request">访客申请</string>
    <string name="titlebar_latest_msg">最新消息</string>
    <string name="titlebar_msg_details">消息详情</string>
    <string name="titlebar_my_settings">个人设置</string>
    <string name="titlebar_edit_user_info">修改用户信息</string>
    <string name="titlebar_lock_setup">设置手势密码</string>
    <string name="titlebar_lock_close">关闭手势密码</string>
    <string name="titlebar_lock_check">验证手势密码</string>
    
    <!-- 登录页 -->
    <string name="login_account_hint">请输入账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    
    <!-- 首页Tab栏 -->
    <string name="main_tab_unlock">手机开门</string>
    <string name="main_tab_visitor">访客申请</string>
    <string name="main_tab_message">消息推送</string>
    <string name="main_tab_settings">个人设置</string>
    
    <!-- 手机开门模块 -->
    <string name="unlock_shake_shake">摇一摇</string>
    <string name="unlock_send">发送</string>
    <string name="unlock_next">下一步</string>
    <string name="unlock_generate_qrcode">生成二维码</string>
    <string name="unlock_start_time">开始时间</string>
    <string name="unlock_end_time">截止时间</string>
    <string name="unlock_active_time">有效时间</string>
    <string name="unlock_minute">分钟</string>
    <string name="unlock_share">发送好友</string>
    <string name="unlock_area_pic">用户所在楼房线路指引图</string>
    
    <!-- 访客申请模块 -->
    <string name="visitor_mobile_hint">请输入要拜访的业主手机号码</string>
    <string name="visitor_request">申请钥匙</string>
    
    <!-- 最新消息模块 -->
    <string name="public_message">公共消息</string>
    <string name="private_message">个人消息</string>
    
    <!-- 个人设置模块 -->
    <string name="settings_community">当前小区</string>
    <string name="settings_my_key">我的钥匙</string>
    <string name="settings_remote_open_door">远程开门</string>
    <string name="settings_modify_userinfo">修改用户信息</string>
    <string name="settings_share">分享给好友</string>
    <string name="settings_permission">用户授权</string>
    <string name="settings_lock">手势密码</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_clear">清除缓存</string>
    <string name="settings_check_update">版本检查及更新</string>
    <string name="settings_name">用户姓名</string>
    <string name="settings_pwd">密    码</string>
    <string name="settings_mobile">手机号码</string>
    <string name="settings_ok">确定修改</string>
    <string name="settings_logout">退出登录</string>

    <!-- 异常提示语 -->
    <string name="connect_exception">请求失败，请稍候再试！</string>

</resources>
