<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:background="@drawable/titlebar_btn_bg_selector"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:singleLine="true"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp" >

        <!-- 标题栏返回按钮 -->
        <ImageButton
            android:id="@+id/titlebar_back_btn"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/titlebar_btn_bg_selector"
            android:contentDescription="@string/titlebar_back"
            android:src="@drawable/arrow_left"
            android:padding="4dp"
            android:visibility="visible" />

        <!-- 取消 -->
        <LinearLayout
            android:id="@+id/titlebar_cancel_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:orientation="horizontal"
            android:background="@drawable/titlebar_btn_bg_shape_selector"
            android:clickable="true"
            android:visibility="gone" >"

            <TextView
                android:id="@+id/titlebar_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titlebar_cancel"
                android:textSize="18sp"
                android:textColor="@color/white" />

        </LinearLayout>

        <!-- 全选 -->
        <LinearLayout
            android:id="@+id/titlebar_check_all_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:orientation="horizontal"
            android:background="@drawable/titlebar_btn_bg_shape_selector"
            android:clickable="true"
            android:visibility="gone" >

            <TextView
                android:id="@+id/titlebar_check_all_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:text="@string/titlebar_check_all"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:visibility="gone" />
            
        </LinearLayout>

        <!-- 发送钥匙 -->
        <LinearLayout
            android:id="@+id/titlebar_send_key_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:orientation="horizontal"
            android:background="@drawable/titlebar_btn_bg_shape_selector"
            android:clickable="true"
            android:visibility="gone" >

            <TextView
                android:id="@+id/titlebar_send_key_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titlebar_send_key"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <!-- 选择钥匙 -->
        <ImageButton
            android:id="@+id/titlebar_select_key_btn"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/titlebar_btn_bg_selector"
            android:contentDescription="@string/titlebar_select_key"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/choose_key_btn"
            android:visibility="gone" />
    </RelativeLayout>

</FrameLayout>