<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <com.patr.radix.view.TitleBarView
        android:id="@+id/settings_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:id="@+id/settings_user_info_ll"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/btn_bg_selector" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/user_picture_default" />

        <TextView
            android:id="@+id/settings_username_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/arrow_right" />
    </LinearLayout>
    
    <Button
        android:id="@+id/settings_user_permission_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg_selector"
        android:drawableLeft="@drawable/setting_icon01"
        android:text="@string/settings_permission"
        android:textSize="18sp" />
    
    <Button
        android:id="@+id/settings_feedback_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="35dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/btn_bg_selector"
        android:drawableLeft="@drawable/setting_icon02"
        android:text="@string/settings_feedback"
        android:textSize="18sp" />
    
    <LinearLayout
        android:id="@+id/settings_lock_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/btn_bg_selector"
        android:clickable="true"
        android:orientation="horizontal" >
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="35dp"
            android:background="@null"
            android:src="@drawable/setting_icon05"
            android:scaleType="fitCenter" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:background="@null"
            android:text="@string/settings_lock"
            android:textSize="18sp"
            android:textColor="@color/black" />
        
        <TextView
            android:id="@+id/settings_lock_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="3dp"
            android:background="@null"
            android:text="(关)"
            android:textSize="16sp"
            android:textColor="@color/gray_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_current_community_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/btn_bg_selector"
        android:clickable="true"
        android:orientation="horizontal" >
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="35dp"
            android:background="@null"
            android:src="@drawable/setting_icon04"
            android:scaleType="fitCenter" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:background="@null"
            android:text="@string/settings_community"
            android:textSize="18sp"
            android:textColor="@color/black" />
        
        <TextView
            android:id="@+id/settings_current_community_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="3dp"
            android:background="@null"
            android:text="@string/settings_community"
            android:textSize="16sp"
            android:textColor="@color/gray_text" />
    </LinearLayout>
    
    <Button
        android:id="@+id/settings_check_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="35dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/btn_bg_selector"
        android:drawableLeft="@drawable/setting_icon03"
        android:text="@string/settings_check_update"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg_shape_selector"
        android:padding="12dp"
        android:text="@string/settings_logout"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>