<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/gray_bg"
    tools:context=".LoginActivity" >
    
    <com.patr.radix.view.TitleBarView
        android:id="@+id/login_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <ScrollView
        android:id="@+id/login_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    
            <ImageView
                android:layout_width="450dp"
                android:layout_height="105dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:scaleType="fitCenter" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingRight="15dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/user_icon" />

                <EditText
                    android:id="@+id/login_user_et"
                    style="?android:attr/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:hint="@string/login_account_hint"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_text" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1px"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingRight="15dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/password_icon" />

                <EditText
                    android:id="@+id/login_pwd_et"
                    style="?android:attr/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:hint="@string/login_pwd_hint"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_text" />
            </LinearLayout>
            
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_shape_selector"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />
            
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>